--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
-    "@tanstack/react-query": "^5.51.23",
     "@types/next-auth": "^3.15.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +29,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
