--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "eshop",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts",
-    "prepare": "husky && husky install"
+    "prepare": "husky && husky install",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -38,6 +40,7 @@
     "stripe": "^16.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.2.5",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
@@ -49,7 +52,11 @@
     "@graphql-codegen/client-preset": "4.2.6",
     "@graphql-codegen/introspection": "4.0.3",
     "@playwright/test": "^1.47.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -57,6 +64,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
