--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/next-auth": "^3.15.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
