--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/next-auth": "^3.15.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "graphql": "^16.8.1",
     "lucide-react": "^0.395.0",
     "next": "^14.2.13",
