--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.52.0",
     "sonner": "^1.5.0",
     "stripe": "^16.8.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
