--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/next-auth": "^3.15.0",
+    "algoliasearch": "^5.13.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "graphql": "^16.8.1",
+    "instantsearch.css": "^8.5.1",
     "lucide-react": "^0.395.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
@@ -38,6 +40,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-instantsearch": "^7.13.7",
     "sonner": "^1.5.0",
     "stripe": "^16.8.0",
     "swiper": "^11.1.14",
