--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,4 +19,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: npm i -g npm@latest
+      - run: npm install
       - run: npm run test
