--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,5 +1,3 @@
-
-
 name: Discord notify DM
 on:
   pull_request:
@@ -26,7 +24,8 @@ jobs:
 
           curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
           -H "Content-Type: application/json" \
-          -d '{"content": "Nowy pull request został otwarty!\nTytuł: '${{ github.event.pull_request.title }}'\nAutor: '${{ github.actor }}'\nLink: '${{ github.event.pull_request.html_url }}'"}' \
-          https://discord.com/api/v10/channels/$CHANNEL_ID/messages
-
-      
+          -d @- https://discord.com/api/v10/channels/$CHANNEL_ID/messages <<EOF
+          {
+            "content": "Nowy pull request został otwarty!\\nTytuł: ${{ github.event.pull_request.title }}\\nAutor: ${{ github.actor }}\\nLink: ${{ github.event.pull_request.html_url }}"
+          }
+          EOF
