--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -4,8 +4,7 @@ on:
     types: [opened]
 
 env:
-  DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
-  DISCORD_USER_ID: 401688734560550914
+  WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
   build:
@@ -16,16 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: |
-          CHANNEL_ID=$(curl -s -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
-          -H "Content-Type: application/json" \
-          -d '{"recipient_id": "'$DISCORD_USER_ID'"}' \
-          https://discord.com/api/v10/users/@me/channels | jq -r '.id')
-
-          curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
-          -H "Content-Type: application/json" \
-          -d @- https://discord.com/api/v10/channels/$CHANNEL_ID/messages <<EOF
-          {
-            "content": "Nowy pull request został otwarty!\\nTytuł: ${{ github.event.pull_request.title }}\\nAutor: ${{ github.actor }}\\nLink: ${{ github.event.pull_request.html_url }}"
-          }
-          EOF
+      run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"content": "Nowy pull request został otwarty!\nTytuł: '${{ github.event.pull_request.title }}'\nAutor: '${{ github.actor }}'\nLink: '${{ github.event.pull_request.html_url }}'"}' \
+          $WEBHOOK_URL
