--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      run: |
+      - run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{"content": "Nowy pull request został otwarty!\nTytuł: '${{ github.event.pull_request.title }}'\nAutor: '${{ github.actor }}'\nLink: '${{ github.event.pull_request.html_url }}'"}' \
           $WEBHOOK_URL
