--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,10 +1,12 @@
 name: Discord notify DM
 on:
   pull_request:
-    types: [opened]
+    types: [opened, reopened]
 
 env:
-  WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
+  DISCORD_USER_ID: ${{ secrets.DISCORD_USER_ID }}
 
 jobs:
   build:
@@ -14,11 +16,27 @@ jobs:
         node-version: [22.x]
     steps:
       - uses: actions/checkout@v4
+      - name: Discord notify
+      - run: |
+          curl -X POST \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
+            -d '{
+                  "content": "🔔 **Pull Request Opened** 🔔\n
+                  Repository: ${{ github.repository }}\n
+                  PR Title: ${{ github.event.pull_request.title }}\n
+                  PR Link: ${{ github.event.pull_request.html_url }}\n
+                  Author: ${{ github.event.pull_request.user.login }}"
+                }' \
+            https://discord.com/api/v9/channels/$DISCORD_USER_ID/messages
 
       - run: |
           curl -X POST -H "Content-Type: application/json" \
-          -d @- $WEBHOOK_URL <<EOF
-          {
-            "content": "Nowy pull request został otwarty!\nTytuł: ${{ github.event.pull_request.title }}\nAutor: ${{ github.actor }}\nLink: ${{ github.event.pull_request.html_url }}"
-          }
-          EOF
+            -d '{
+                  "content": "🔔 **Pull Request Opened** 🔔\n
+                  Repository: ${{ github.repository }}\n
+                  PR Title: ${{ github.event.pull_request.title }}\n
+                  PR Link: ${{ github.event.pull_request.html_url }}\n
+                  Author: ${{ github.event.pull_request.user.login }}"
+                }' \
+            "$DISCORD_WEBHOOK"
