--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -9,7 +9,7 @@ on:
 env:
   DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
   DISCORD_USER_ID: ${{ secrets.DISCORD_USER_ID }}
-  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
   notify:
@@ -48,5 +48,5 @@ jobs:
                   PR Link: '${{ github.event.pull_request.html_url }}'\n
                   Author: '${{ github.event.pull_request.user.login }}'"
                 }' \
-            "$DISCORD_WEBHOOK"
+            "$DISCORD_WEBHOOK_URL"
 
