--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -39,14 +39,10 @@ jobs:
 
       - name: Notify via Discord Webhook
         run: |
-          curl -X POST \
-            -H "Content-Type: application/json" \
-            -d '{
-                  "content": "🔔 **Pull Request Opened** 🔔\n
-                  Repository: '${{ github.repository }}'\n
-                  PR Title: '${{ github.event.pull_request.title }}'\n
-                  PR Link: '${{ github.event.pull_request.html_url }}'\n
-                  Author: '${{ github.event.pull_request.user.login }}'"
-                }' \
-            "$DISCORD_WEBHOOK_URL"
+          curl -X POST -H "Content-Type: application/json" \
+          -d @- $DISCORD_WEBHOOK_URL <<EOF
+          {
+            "content": "Nowy pull request został otwarty!\nTytuł: ${{ github.event.pull_request.title }}\nAutor: ${{ github.actor }}\nLink: ${{ github.event.pull_request.html_url }}"
+          }
+          EOF
 
