--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,27 +1,22 @@
-name: Discord Notify DM
+name: Notify Discord on Pull Request
 
 on:
   push:
     branches: [dev]
   pull_request:
-    types: [opened, reopened]
-
-env:
-  DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
-  DISCORD_USER_ID: ${{ secrets.DISCORD_USER_ID }}
-  DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+    types: [opened]
 
 jobs:
-  notify:
+  discord-notification:
     runs-on: ubuntu-latest
     steps:
-      - name: Notify via Discord DM
+      - name: Send Discord Notification
+        env:
+          WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
           curl -X POST -H "Content-Type: application/json" \
-          -d @- $DISCORD_WEBHOOK_URL <<EOF
+          -d @- $WEBHOOK_URL <<EOF
           {
             "content": "Nowy pull request został otwarty!\nTytuł: ${{ github.event.pull_request.title }}\nAutor: ${{ github.actor }}\nLink: ${{ github.event.pull_request.html_url }}"
           }
           EOF
-
-
