--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,22 +1,28 @@
-name: Notify Discord on Pull Request
+name: Discord Notify
 
 on:
   push:
     branches: [dev]
   pull_request:
-    types: [opened]
+    types: [opened, reopened]
+
+env:
+  DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
-  discord-notification:
+  notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Send Discord Notification
-        env:
-          WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+      - name: Notify via Discord Webhook
         run: |
           curl -X POST -H "Content-Type: application/json" \
-          -d @- $WEBHOOK_URL <<EOF
-          {
-            "content": "Nowy pull request został otwarty!\nTytuł: ${{ github.event.pull_request.title }}\nAutor: ${{ github.actor }}\nLink: ${{ github.event.pull_request.html_url }}"
-          }
-          EOF
+          -d "{
+            \"content\": \"Nowy pull request został otwarty!\n
+            Tytuł: ${GITHUB_EVENT_PULL_REQUEST_TITLE}\n
+            Autor: ${GITHUB_ACTOR}\n
+            Link: ${GITHUB_EVENT_PULL_REQUEST_HTML_URL}\"
+          }" "$DISCORD_WEBHOOK_URL"
+        env:
+          GITHUB_EVENT_PULL_REQUEST_TITLE: ${{ github.event.pull_request.title }}
+          GITHUB_EVENT_PULL_REQUEST_HTML_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_ACTOR: ${{ github.actor }}
