--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,6 +1,8 @@
 name: Discord notify DM
 
 on:
+  push:
+    branches: [dev]
   pull_request:
     types: [opened]
 
@@ -38,12 +40,10 @@ jobs:
           # Step 2: Send message to the DM channel
           curl -X POST -H "Content-Type: application/json" \
             -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
-            -d @- <<EOF
-            {
-              "content": "🔔 **Nowy pull request został otwarty!** 🔔\n
+            -d "{
+              \"content\": \"🔔 **Nowy pull request został otwarty!** 🔔\n
               Tytuł: ${{ github.event.pull_request.title }}\n
               Autor: ${{ github.actor }}\n
               Link: ${{ github.event.pull_request.html_url }}
-            }
-            EOF
-
+            }" \
+            https://discord.com/api/v9/channels/$CHANNEL_ID/messages
