--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -34,16 +34,14 @@ jobs:
           CHANNEL_ID=$(curl -s -X POST \
             -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
-            -d "{\"recipient_id\": \"$DISCORD_USER_ID\"}" \
+            -d '{"recipient_id": "'$DISCORD_USER_ID'"}' \
             https://discord.com/api/v9/users/@me/channels | jq -r '.id')
 
           # Step 2: Send message to the DM channel
-          curl -X POST -H "Content-Type: application/json" \
-            -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
-            -d "{
-              \"content\": \"🔔 **Nowy pull request został otwarty!** 🔔\n
-              Tytuł: ${{ github.event.pull_request.title }}\n
-              Autor: ${{ github.actor }}\n
-              Link: ${{ github.event.pull_request.html_url }}
-            }" \
+          curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "content": "🔔 **Nowy pull request został otwarty!** 🔔\nTytuł: '${{ github.event.pull_request.title }}'\nAutor: '${{ github.actor }}'\nLink: '${{ github.event.pull_request.html_url }}'"
+            }' \
             https://discord.com/api/v9/channels/$CHANNEL_ID/messages
+
