--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,8 +1,6 @@
 name: Discord notify DM
 
 on:
-  push:
-    branches: [dev]
   pull_request:
     types: [opened]
 
@@ -19,8 +17,8 @@ jobs:
         node-version: [22.x]
     steps:
       - uses: actions/checkout@v4
-
-      - run: |
+      - name: Notify via Discord Webhook
+        run: |
           curl -X POST -H "Content-Type: application/json" \
           -d @- $WEBHOOK_URL <<EOF
           {
@@ -30,14 +28,12 @@ jobs:
 
       - name: Send DM to user on new PR
         run: |
-          # Step 1: Create DM channel with user
           CHANNEL_ID=$(curl -s -X POST \
             -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{"recipient_id": "'$DISCORD_USER_ID'"}' \
             https://discord.com/api/v9/users/@me/channels | jq -r '.id')
 
-          # Step 2: Send message to the DM channel
           curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{
