--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -17,8 +17,8 @@ jobs:
         node-version: [22.x]
     steps:
       - uses: actions/checkout@v4
-      - name: Notify via Discord Webhook
-        run: |
+
+      - run: |
           curl -X POST -H "Content-Type: application/json" \
           -d @- $WEBHOOK_URL <<EOF
           {
@@ -28,16 +28,17 @@ jobs:
 
       - name: Send DM to user on new PR
         run: |
+          # Step 1: Create DM channel with user
           CHANNEL_ID=$(curl -s -X POST \
             -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{"recipient_id": "'$DISCORD_USER_ID'"}' \
             https://discord.com/api/v9/users/@me/channels | jq -r '.id')
 
+          # Step 2: Send message to the DM channel
           curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{
               "content": "🔔 **Nowy pull request został otwarty!** 🔔\nTytuł: '${{ github.event.pull_request.title }}'\nAutor: '${{ github.actor }}'\nLink: '${{ github.event.pull_request.html_url }}'"
             }' \
             https://discord.com/api/v9/channels/$CHANNEL_ID/messages
-
