--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,6 +1,8 @@
 name: Discord notify DM
 
 on:
+  push:
+    branches: [dev]
   pull_request:
     types: [opened]
 
@@ -28,11 +30,13 @@ jobs:
 
       - name: Send DM to user on new PR
         run: |
+
           CHANNEL_ID=$(curl -s -X POST \
             -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d '{"recipient_id": "'$DISCORD_USER_ID'"}' \
             https://discord.com/api/v9/users/@me/channels | jq -r '.id')
+
 
           curl -X POST -H "Authorization: Bot $DISCORD_BOT_TOKEN" \
             -H "Content-Type: application/json" \
